[package]
name = "zaphwork"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zaphwork"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

[dev-dependencies]
proptest = "1.4"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3
